# Rigel

./: .gitmodules  CMakeLists.txt  Rigel.sln
Rigel/: Rigel.vcxproj  Rigel.vcxproj.filters
Rigel/res/shaders/: basic.shader  color.shader  specular.shader  standart.shader
Rigel/src/: Camera.cpp  Camera.h  DirectionalLight.h  Input.cpp  Input.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Player.cpp  Player.h  PointLight.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Spectator.cpp  Spectator.h  SpotLight.h  StaticShader.cpp  StaticShader.h  Texture.cpp  Texture.h  main.cpp
Rigel/src/glutils/: IndexBuffer.cpp  IndexBuffer.h  Renderer.h  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  (+2 more)
res/shaders/: color.shader
src/: Camera.cpp  Camera.h  DirectionalLight.h  Light.h  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PointLight.h  Renderer.cpp  Renderer.h  Rigel.h  Spectator.cpp  Spectator.h  SpotLight.h  StandardShader.cpp  StandardShader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp
src/glutils/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/render/: Camera.cpp  Camera.h  Circle.cpp  Circle.h  IndexBuffer.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Rect.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureRectangle.cpp  TextureRectangle.h  Transformable.cpp  Transformable.h  Triangle.cpp  Triangle.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/window/: Keyboard.cpp  Keyboard.h  Window.cpp  Window.h
